# janus

./: Cargo.toml
src/: archive.rs  cli.rs  config.rs  error.rs  lib.rs  next.rs  types.rs
src/commands/: add_note.rs  archive.rs  board.rs  create.rs  ls.rs  mod.rs  next.rs  set.rs
src/commands/objective/: add_note.rs
src/commands/plan/: hud.rs  mod.rs  next.rs
src/commands/sync/: sanitize.rs
src/display/: mod.rs
src/events/: mod.rs  types.rs
src/mcp/: format.rs  mod.rs  requests.rs  tools.rs  workspace.rs
src/query/: mod.rs
src/remote/: mod.rs
src/status/: mod.rs  plan.rs
src/store/: queries.rs
src/ticket/: builder.rs  locator.rs  mod.rs  parser.rs  repository.rs
src/tui/: analytics.rs  mod.rs  sync_handler.rs  theme.rs
src/tui/board/: mod.rs  model.rs
src/tui/board/handlers/: column.rs  context.rs
src/tui/components/: select.rs  ticket_list.rs
src/tui/plan_hud/: components.rs  mod.rs  model.rs
src/tui/remote/components/: list_pane.rs
src/tui/services/: external_editor.rs  mod.rs
src/utils/: validation.rs
tests/: mcp_integration_test.rs  tui_board_test.rs
tests/snapshots/: tui_board_test__toggle_current_column.snap  tui_board_test__toggle_multiple_columns.snap
