[workspace]
members = ["crates/janus-schema"]

[package]
name = "janus"
version = "1.23.1"
edition = "2024"
description = "Plain-text issue tracking"
license = "MIT"
repository = "https://github.com/divmain/janus"

[features]
default = []

[[bin]]
name = "janus"
path = "src/main.rs"

[dependencies]
# Internal crates
janus-schema = { path = "crates/janus-schema" }

# External dependencies
atty = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
jiff = "0.2"
thiserror = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
rand = "0.9"
uuid = { version = "1.11", features = ["v4"] }

# Async runtime for HTTP clients
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync"] }
futures = "0.3"
async-trait = "0.1"

# GitHub API client
octocrab = "0.48"

# HTTP client for Linear API
reqwest = { version = "0.12", features = ["json"] }

# HTTP types (Uri, etc.) - used by octocrab integration
http = "1"

# Type-safe GraphQL client
cynic = "3"

# TUI Framework (React-like declarative API)
# Using fork with cursor navigation fixes including UTF-8 character handling
iocraft = { git = "https://github.com/divmain/iocraft", rev = "1f8a363" }

# Terminal manipulation (used by ExternalEditor for TUI suspend/resume)
# Already a transitive dependency via iocraft
crossterm = "0.28"

# Fuzzy search for filtering
fuzzy-matcher = "0.3"

# Lazy static initialization
once_cell = "1.19"

directories = "5"

# Secret handling for credentials
secrecy = "0.10"

# Enum dispatch for trait objects
enum_dispatch = "0.3"

# Markdown parsing (AST-based, CommonMark + GFM compliant)
comrak = "0.34"

# Syntax highlighting for code blocks in TUI markdown viewer
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Markdown linting and auto-formatting
rumdl_lib = { package = "rumdl", version = "0.1" }

# Temp files for editor workflows
tempfile = "3"

# Timeout support for child processes
wait-timeout = "0.2"

# Clipboard support
clipboard-rs = "0.3.2"

# URL parsing
url = "2.5"

# MCP (Model Context Protocol) server
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }

# Table formatting for pretty output
tabled = "0.20"

# Semantic search
fastembed = { version = "5" }

# In-memory concurrent store
dashmap = "6"
notify = "8"
blake3 = "1"

# Case-insensitive string matching (allocation-free)
unicase = "2"

# Parking lot for poison-resistant mutexes (faster, no poisoning)
parking_lot = "0.12"

# Logging for production visibility
tracing = "0.1"

[build-dependencies]
cynic-codegen = { version = "3", features = ["rkyv"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
insta = { version = "1.39", features = ["filters"] }

